--- a/package.json
+++ b/package.json
@@ -13,28 +13,29 @@
     "test": "pnpm prettier:check"
   },
   "dependencies": {
-    "@headlessui/react": "^2.1.2",
+    "@emailjs/browser": "^4.4.1",
+    "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
     "geist": "^1.3.1",
+    "gsap": "^3.12.5",
     "next": "15.0.0-canary.113",
-    "pnpm": "^9.10.0",
+    "pnpm": "^9.11.0",
     "react": "19.0.0-rc-3208e73e-20240730",
     "react-dom": "19.0.0-rc-3208e73e-20240730",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
-    "@tailwindcss/typography": "^0.5.13",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "20.14.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.6",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.13",
     "typescript": "5.5.4"
   }
 }
