--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ SITE_NAME="Next.js Commerce"
 SHOPIFY_REVALIDATION_SECRET=""
 SHOPIFY_STOREFRONT_ACCESS_TOKEN=""
 SHOPIFY_STORE_DOMAIN="[your-shopify-store-subdomain].myshopify.com"
+
+
+# COMPANY_NAME="Vanity"
+# TWITTER_CREATOR="@vercel"
+# TWITTER_SITE="https://nextjs.org/commerce"
+# SITE_NAME="The Bath Vanity"
+# SHOPIFY_REVALIDATION_SECRET="my_secret"
+# SHOPIFY_STOREFRONT_ACCESS_TOKEN="752cfe86c9108537f45d33e4494bfafc"
+# SHOPIFY_STORE_DOMAIN="vanity-n-lighting.myshopify.com"
